test/negative/format_iface_arg.mut
# format() with interface argument — should fail
interface IShape
    def area(self) -> f64
end

class Circle : IShape
    r: f64
    def init(self, r: f64)
        self.r = r
    end
    def area(self) -> f64
        return self.r * self.r * 3.14
    end
end

s: IShape = Circle(5.0)
msg := format("shape: {}", s)
print(msg)
